--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,21 +74,48 @@ body {
     background-color: #F9FAFC;
 }
 
+footer {
+    background-color: #445261;
+    opacity: .9;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+/* CARD */
+
 .card {
     border: none;
     background-color: transparent;
+    max-height: 300px;
 }
 
 .image-container {
     position: relative;
+    max-height: 300px;
+    max-width: 300px;
+    background-size: cover;
 }
 
 .image-flash {
     position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #23BBBB;
+    top: 10%;
+    left: -26px;
+
+}
+
+.img-round {
+    border-radius: 50%;
+}
+
+.image-flash-author,
+.image-flash-category { 
+    background-color: #acbb23;
+    border-radius: 4px;
+    opacity: .8;
+    margin-top: 3px;
+    padding: 0 5px;
 }
 
 .author {
@@ -96,6 +123,32 @@ body {
     margin: 4px;
     text-transform: uppercase;
 }
+
+.category {
+    color: white;
+    margin: 4px;
+    text-transform: uppercase;
+}
+
+.card-featured-comment {
+    margin-top: 20px;
+    color: gray;
+}
+
+.card-featured-comment-continue {
+    color: rgb(29, 138, 38);
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: end;
+}
+
+
+
+
+
+
+
+
 
 .masthead {
     margin-top: 10px;
