--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Fonts -->
     
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -99,14 +99,11 @@
 
     <main class="flex-shrink-0 main-bg">
         {% block content %}
-        
-
+        <!--  Block Receipt Column -->
         {% endblock content %}
     </main>
 
-    <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-      <div id="copyright-container">
         <p class="m-0 text-center text-black">2023 ShemmyYo - Project developed for Educational purposes</p>
         <p class="m-0 text-center text-black">
           <a href="#" target="_blank" rel="noopener" aria-label="Visit my XXXXXXXXX page(opens in a new tab)"
@@ -121,11 +118,10 @@
             aria-label="Visit my GitHub page(opens in a new tab)" id="copyright-text"><i
               class="fab fa-github-square ms-3"></i></a>
         </p>
-      </div>
     </footer>
 </body>
 
-<!-- GSAP Library: https://cdnjs.com/libraries/gsap -->
+<!-- GSAP Library: https://cdnjs.com/libraries/gsap
 <script 
     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" 
     integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" 
