--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,15 +7,15 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-md-6 mt-3 offset-md-2">
             <h3>{% trans "Sign Up" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the code|star blog. Do you already have an account? Then please <a
+            <p>{% blocktrans %}Welcome back to the Shemmylicious Food blog. Do you already have an account? Then please <a
                     class="link" href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-md-8 mt-3 offset-md-3">
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
