--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,13 @@
                               <a class="nav-link" href="{% url 'add-category' %}">Add Category</a>
                             </div>
                           </li>
+
+                          <li class="nav-item nav-link-s">
+                            <div class="nav-item-s">
+                              <a class="nav-link" href="/admin">Admin</a>
+                            </div>
+                          </li>
+
                         </ul>
                       </div>
                     </li>
