--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&family=Sen:wght@400;700;800&display=swap');
+
 root {
-    --basic-color: #;
+    --basic-color: #32d347;
     --active-color: #;
+    --hand-font: 'Sacramento', sans-serif;
+    --main-font: 'Sen', sans-serif;
+    --additional-font: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 * {
@@ -14,15 +20,21 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
 .nav-s {
     padding: 1rem;
     display: flex;
     justify-content: center;
 }
 
-.brand-logo {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
+.navbar-brand img {
+    margin-top: -10px;
+}
+
+.brand-logo {  
+    font-size: 2.3rem;
     font-weight: 700;
     color: #4A4A4F;
 }
@@ -34,14 +46,24 @@ body {
 }
 
 .nav-link-s a {
-    text-decoration:none;
+    /* text-decoration:none; */
+    text-transform:uppercase;
     color: var(--basic-color);
+    font-family: 'Sen', sans-serif;
     font-weight: bold;
 }
 
+.nav-link-drop {
+    font-size: 80%;
+}
 .nav-item-s {
     position:relative;
 }
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding: 20px;
+}
+
 
 .active-nav {
     height: 3px;
@@ -56,6 +78,11 @@ body {
 .inActiveNav {
     background-color: #fff;
 }
+
+
+
+
+
 
 
 /* CI CODE */
@@ -80,12 +107,16 @@ body {
 }
 
 footer {
-    background-color: #445261;
     opacity: .9;
     width: 100%;
     position: fixed;
     bottom: 0;
     left: 0;
+}
+
+footer i {
+    font-size: 150%;
+    color: #acbb23;
 }
 
 /* CARD */
