--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,7 +12,7 @@
         <div class="col-md-6 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the Shemmylicious Food blog. To leave a comment or like a recipe, please log in. If
+            <p>{% blocktrans %}Welcome back to the Shemmylicious Food blog. To leave a comment, add or like a recipe, please log in. If
                 you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
