--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %} 
+{% load static %}
+
 {% block content %}
     <center>
     <br>
@@ -12,6 +14,7 @@
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.media }}
+                
                 {{ form.as_p }}
 
                 <input type="submit" value="Add Recipe" class="btn btn-outline-secondary">
