--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,13 @@
                           Recipes
                         </a>
                         <ul class="dropdown-menu">
+
+                          <li class="nav-item nav-link-s">
+                            <div class="nav-item-s">
+                              <a class="nav-link nav-link-drop" href="{% url 'recipe_mylist' %}"> My Recipes </a>
+                            </div>
+                          </li>
+
                           <li class="nav-item nav-link-s">
                             <div class="nav-item-s">
                               <a class="nav-link nav-link-drop" href="{% url 'add-recipe' %}"> Add Recipe </a>
