--- a/templates/recipe_mylist.html
+++ b/templates/recipe_mylist.html
@@ -5,7 +5,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12 mt-3 left">
+    <div class="col-md-8 offset-md-2 mt-3 left">
       <div class="row">
 
         {% for recipe in object_list %}
@@ -14,23 +14,22 @@
 
             {% if "recipe" in recipe.featured_image.url %}
             <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
-              alt="deafult image" class="card-img-top" style="width: 18rem;">
+              alt="deafult image" class="card-img-top"">
             {% else %}
-            <img src="{{ recipe.featured_image.url }}" alt="image" class="card-img-top" style="width: 18rem;">
+            <img src="{{ recipe.featured_image.url }}" alt="image" class="card-img-top" style="background-size: cover; overflow: hidden;">
             {% endif %}
 
             <div class="card-body">
-              <a href="{% url 'recipe_detail' recipe.slug %}">
-                <h5>"{{ recipe.recipe_title }}"</h5>
-              </a>
-              <p>Author: {{ recipe.author }}</p>
-              <p>{{ recipe.category }}</p>
               <p>{{ recipe.created_date}}
                 <i class="far fa-heart"> {{ recipe.number_of_likes}}</i></small>
               </p>
+              <hr>
+              <h5><strong>{{ recipe.recipe_title }}</strong></h5>
+              <p>Category: {{ recipe.category }}</p>
+              <p>Author: {{ recipe.author }}</p>     
 
-              <a href="#" class="btn btn-primary"><span>Edit</span></a>
-              <a href="#" class="btn btn-primary"><span>Delete</span></a>
+              <a href="{% url 'recipe-edit' recipe.pk %}" class="btn btn-sm btn-outline-success"><span>Edit</span></a>
+              <a href="#" class="btn btn-sm btn-outline-danger"><span>Delete</span></a>
             </div>
           </div>
         </div>
